Fixed problem
image was stretched

--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,6 @@ p{
   display: flex;
   justify-content: center; 
   align-items: center;
-  height: 100vh;
 }
 
 .first p {
